<resources>
    <string name="app_name">Mini Calculadora</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplied">x</string>
    <string name="divided">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="root">Root</string>
    <string name="inv">Inv</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="negative">+-</string>
    <string name="equals">=</string>
    <string name="clear">AC</string>
    <string name="aa">aa</string>
</resources>